--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 header {
   display: grid;
   grid-auto-columns: 1fr auto;
@@ -6,6 +11,32 @@ header {
 header > div {
   align-self: center;
   justify-self: center;
+}
+#fmt {
+  margin-left: 8px;
+}
+#tour {
+  display: grid;
+  grid-template-rows: 0fr;
+  overflow: hidden;
+  transition: grid-template-rows 0.3s;
+}
+#tour ul {
+  align-self: end;
+  min-height: 0;
+  transition: visibility 1s;
+  visibility: hidden;
+  list-style: none;
+  margin: 0;
+}
+#tour ul li:last-child {
+  margin-bottom: 8px;
+}
+#tour.visible {
+  grid-template-rows: 1fr;
+}
+#tour.visible ul {
+  visibility: visible;
 }
 .code {
   display: grid;
