--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -45,10 +45,10 @@ header > div {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
-  gap: 1rem;
+  gap: 16px;
 }
 .code textarea {
-  padding: 0.5rem;
+  padding: 8px;
   height: 50vh;
   font-size: 16px;
 }
@@ -56,10 +56,11 @@ header > div {
   border: 1px solid #bbb;
   background-color: #eee;
   min-height: 10vh;
-  margin-top: 1rem;
-  padding: 0.5rem;
+  margin-top: 16px;
+  padding: 8px;
 }
 #output pre {
-  margin: 0;
+  margin: 0 0 1px 0;
   font-size: 16px;
+  border-bottom: 1px solid #ddd;
 }
