--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -5,11 +5,22 @@
 }
 header {
   display: grid;
-  grid-auto-columns: 1fr auto;
+  grid-auto-columns: auto 1fr auto;
   grid-auto-flow: column;
+  column-gap: 16px;
+  padding: 8px 0;
 }
-header > div {
+header > * {
   align-self: center;
+}
+header > h1 {
+  font-size: 32px;
+  margin: 0;
+  position: relative;
+  top: 3px;
+}
+header > div,
+header > img {
   justify-self: center;
 }
 #fmt {
@@ -45,10 +56,11 @@ header > div {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
-  gap: 16px;
+  gap: 8px;
 }
 #code textarea {
   padding: 8px;
+  margin: 0;
   height: 50vh;
   font-size: 16px;
 }
@@ -56,7 +68,7 @@ header > div {
   border: 1px solid #bbb;
   background-color: #eee;
   min-height: 10vh;
-  margin-top: 16px;
+  margin-top: 8px;
   padding: 8px;
 }
 #output pre {
@@ -73,6 +85,11 @@ header > div {
   font-size: 24px;
 }
 
+body.tour {
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 0 8px;
+}
 body.narrow {
   max-width: 600px;
   margin: auto;
