--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -69,10 +69,14 @@ body.tour {
 }
 .tour header {
   display: grid;
-  grid-auto-columns: auto 1fr auto;
-  grid-auto-flow: column;
   column-gap: 16px;
   padding: 8px 0;
+}
+@media (min-width: 600px) {
+  .tour header {
+    grid-auto-columns: 1fr auto;
+    grid-auto-flow: column;
+  }
 }
 .tour header > * {
   align-self: center;
@@ -112,9 +116,13 @@ body.tour {
 }
 #code {
   display: grid;
-  grid-auto-columns: minmax(0, 1fr);
-  grid-auto-flow: column;
   gap: 8px;
+}
+@media (min-width: 600px) {
+  #code {
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
+  }
 }
 #code textarea {
   padding: 8px;
