--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -1,5 +1,9 @@
 :root {
+  --color-text: #000000;
   --color-logo: #155ec3;
+  --color-accent-bg: #efefef;
+  --color-accent-border: #ccc;
+  --color-go-text: #fff;
 }
 *,
 *::before,
@@ -60,6 +64,47 @@ body.narrow {
   max-width: 800px;
   margin: auto;
   padding: 0 16px;
+}
+
+.exits {
+  display: grid;
+  gap: 16px;
+}
+@media (min-width: 600px) {
+  .exits {
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
+  }
+}
+.exit {
+  padding: 16px;
+  background-color: var(--color-accent-bg);
+  border-radius: 4px;
+  border: 1px solid var(--color-accent-border);
+}
+.exit .sym {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+.exit .title {
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+.exit .go {
+  text-decoration: none;
+  color: var(--color-go-text);
+  font-size: 16px;
+  line-height: 1;
+  display: block;
+  text-align: center;
+  width: 100%;
+  background-color: var(--color-logo);
+  border: 4px solid var(--color-button-border);
+  border-radius: 4px;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  margin-top: 32px;
 }
 
 body.tour {
