--- a/packages/website/assets/index.css
+++ b/packages/website/assets/index.css
@@ -151,6 +151,31 @@ body.tour {
   margin: 0;
   height: 50vh;
   font-size: 16px;
+  width: 100%;
+}
+.code-edit {
+  position: relative;
+}
+.code-edit .overlay {
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  white-space: pre-wrap;
+  pointer-events: none;
+  padding: 8px;
+  margin: 0;
+  font-family: monospace;
+  font-size: 16px;
+  border: 2px inset transparent;
+  color: transparent;
+}
+.code-edit .overlay mark {
+  color: transparent;
+  background: #ffdae2aa;
+  display: inline-block;
+  width: 100%;
 }
 #output {
   border: 1px solid #bbb;
